# Python-Package

./: .coverage  .gitignore  PEP8_Whitespace_test.py  PEP8_comments_test.py  PEP8_naming_test.py  README.md  pep8-Lay-out-test.py  pyproject.toml  pythonscript1.py  setup.py
.github/workflows/: github-actions-demo.yml  reusabletest_action.yml  test_python_action.yml
exercise_package/: PEP8_Lay_out.py  PEP8_Whitespace.py  pythonscript1.py  ruff_test.py
exercise_package.egg-info/: PKG-INFO  SOURCES.txt
numbers/: pyproject.toml
numbers/src/numbers/: __init__.py
python_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_PEP8_Lay_out.py  test_PEP8_Whitespace.py  test_PEP8_comments.py  test_docstring.py  test_math_try.py
