[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-package"
version = "0.1.0"
description = "A sample Python package with testing and coverage"
authors = [
  { name = "Mariane Diby", email = "mdiby@stsci.edu" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov"
]
[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --tb=short"
testpaths = ["tests"]
